<resources>
    <string name="app_name">xxxx</string>
    <string name="welcome">欢迎来到xxx</string>
    <string name="start_game">xxxx</string>
    <string name="practice_name">训练场</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号: </string>
    <string name="account_hint">请输入手机号</string>
    <string name="pwd">密码: </string>
    <string name="pwd_hint">请输入密码</string>

    <string name="phone">手机号: </string>
    <string name="nick_name">昵称: </string>
    <string name="nick_name_hint">请输入昵称</string>
    <string name="confirm_pwd">确认密码: </string>

    <string name="cancel_match">取消匹配</string>
    <string name="renju">人局</string>
</resources>
